# dotagents

./: .gitignore  .rules  CITATION.cff  CONTRIBUTING.md  MEMORY.md  README.md  agent  agents.toml  pyproject.toml
claude/: README.md  settings.json
claude/hooks/: session-start.sh
codex/: README.md  config.toml  hooks.json
codex/agents/: reviewer.toml
codex/hooks/: session-start.sh
copilot/: README.md  review.prompt.md
copilot/agents/: reviewer.agent.md
copilot/hooks/: dotagents-discovery.json  git-guardrails.json
docs/: architecture.md  authoring-skills.md  compiler.md  development.md  global-install.md  manifest.md  providers.md
docs/decisions/: 001-managed-runtime-output.md  002-deterministic-compiler-layer.md  003-pinned-remote-skill-sources.md  004-read-only-capability-index.md  005-defer-in-process-codex-reviewer.md
docs/workflows/: compiler-github-skill-example.md  compiler-mcp-example.md  compiler-template-example.md  saga.md  (+2 more)
gemini/: README.md  settings.json
hooks/: discovery-common.sh
presets/: contribute  default  dev  full  review  safety  session
rules/: rules.md
scripts/: code-simplify  gh-issue  memlog  review-branch  review-code  simplify-code
tests/: helpers.py  smoke-test  smoke-test-dot  test_bin_dot.py  test_cli.py  test_compiler.py  test_council_launcher.py  test_discovery_hook.py  test_doctor.py  test_lockfile.py  test_manifest.py  test_pr_comments_scripts.py  test_pr_walkthrough_scripts.py  test_provider_hooks.py  test_review_pr_scripts.py  test_runtime.py  test_skill_sync_parity.py  test_skillfile.py  test_version.py
(+47 files in other folders)
