[project]
name = "dotagents"
version = "0.1.0"
description = "Package-driven agent configuration harness for repo-local AI coding environments."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [
  { name = "Huascar Sanchez" },
]
dependencies = [
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[dependency-groups]
dev = [
  "prek>=0.2.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "ty>=0.0.1a1",
]

[project.scripts]
dotagents = "dotagents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotagents"]
artifacts = ["src/dotagents/py.typed"]

[tool.hatch.build.targets.wheel.force-include]
"agents.toml" = "dotagents/_assets/agents.toml"
"rules" = "dotagents/_assets/rules"
"scripts" = "dotagents/_assets/scripts"
"skills" = "dotagents/_assets/skills"
"claude" = "dotagents/_assets/claude"
"codex" = "dotagents/_assets/codex"
"copilot" = "dotagents/_assets/copilot"
"gemini" = "dotagents/_assets/gemini"

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py314"
src = ["src"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
